@@ -1,0 +1,34 @@
+1	48060567	52060567	hild1
+2	85941853	100407914	hild2
+2	134382738	137882738	hild3
+2	182882739	189882739	hild4
+3	47500000	50000000	hild5
+3	83500000	87000000	hild6
+3	89000000	97500000	hild7
+5	44500000	50500000	hild8
+5	98000000	100500000	hild9
+5	129000000	132000000	hild10
+5	135500000	138500000	hild11
+6	25500000	33500000	hild12
+6	57000000	64000000	hild13
+6	140000000	142500000	hild14
+7	55193285	66193285	hild15
+8	 8000000	12000000	hild16
+8	43000000	50000000	hild17
+8	112000000	115000000	hild18
+10	37000000	43000000	hild19
+11	46000000	57000000	hild20
+11	87500000	90500000	hild21
+12	33000000	40000000	hild22
+12	109521663	112021663	hild23
+20	32000000	34500000	hild24
+X	14150264	16650264	hild25
+X	25650264	28650264	hild26
+X	33150264	35650264	hild27
+X	55133704	60500000	hild28
+X	65133704	67633704	hild29
+X	71633704	77580511	hild30
+X	80080511	86080511	hild31
+X	100580511	103080511	hild32
+X	125602146	128102146	hild33
+X	129102146	131602146	hild34
